--- a/style.css
+++ b/style.css
@@ -40,3 +40,137 @@ notebook/pc:
 */
 
 /* tvoje styly sem */
+
+@media (min-width: 310px;){
+    .doporucujeme {
+        display: flex;
+        flex-direction: column;
+        width: 100%;}
+    
+        .hlavni-recept { 
+        /* min-height: 400; */
+        background-image: url(images/burger.jpg);
+        background-size: cover; 
+        background-repeat: no-repeat;
+        display: flex;
+        flex-direction: column;
+        color: white;
+        /* position: relative; */ }
+
+            .recept-nazev {
+            font-size: 28px;
+            color: white;
+            font-weight: 400;
+            right: 10px;
+            bottom: 10px;
+            }
+
+            .recept-kategorie {
+            font-size: 14px;
+            font-weight: 400;
+            top: 10px;
+            left: 10px; }
+
+            .recept-komentare {
+             font-size: 14px;
+            font-weight: 400;
+            top: 10px;
+            right: 10px;}
+
+        
+
+        .recept-recept2 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        color: white;
+        background-image: url(images/sushi.jpg);
+        }
+        .recept-recept3 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        }
+        .recept-recept4 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        }
+        .recept-recept5 {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        }
+    }
+}
+
+@media (min-width: 480px) {
+    .doporucujeme {
+        height: 550px;
+        display: flex;
+    }
+    .burger {
+        width: 100%;
+        height: 50%;
+        flex-flow:row;
+        flex-wrap: wrap;
+        display: flex;
+    }
+    
+     .img {
+        width: 50%%;
+        height: 50%;
+        flex-flow:row;
+        flex-wrap: wrap;
+        display: flex;
+        align-content: 
+    }   
+    
+} 
+.hlavni-recept {
+    min-height: 400;
+    background-image: url(images/burger.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: white;
+    position: relative;
+}
+/* .hlavni-recept::before {
+    content: " ";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black; */
+}
+.recept-meta {
+    display: flex;
+    justify-content: space-between;
+    font-size: 14px;
+}
+.recept-kategorie {
+    display: flex;
+    padding: 10px;
+}
+.recept-komentare {
+    float: right;
+    padding: 10px;
+}
+
+.recept.nazev {
+    font-size: 48px;
+}
+.sloupec {
+    display: flex;
+    direction: row;
+    
+}
+/* .background-image: linear-gradient (rgba (0, 0, 0, 0.4),
+                                   rgba (0, 0, 0, 0.4)),
+                    url (images/burger.jpg); 
+.hlavni-recept:hover::before {
+    background-color: rgba (0, 0, 0, 0);
+}*/
