--- a/style.css
+++ b/style.css
@@ -41,101 +41,123 @@ notebook/pc:
 
 /* tvoje styly sem */
 
-@media (min-width: 310px;){
-    .doporucujeme {
-        display: flex;
-        flex-direction: column;
-        width: 100%;}
-    
-        .hlavni-recept { 
-        /* min-height: 400; */
-        background-image: url(images/burger.jpg);
-        background-size: cover; 
-        background-repeat: no-repeat;
-        display: flex;
-        flex-direction: column;
-        color: white;
-        /* position: relative; */ }
-
-            .recept-nazev {
-            font-size: 28px;
-            color: white;
-            font-weight: 400;
-            right: 10px;
-            bottom: 10px;
-            }
-
-            .recept-kategorie {
-            font-size: 14px;
-            font-weight: 400;
-            top: 10px;
-            left: 10px; }
-
-            .recept-komentare {
-             font-size: 14px;
-            font-weight: 400;
-            top: 10px;
-            right: 10px;}
-
-        
-
-        .recept-recept2 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        color: white;
-        background-image: url(images/sushi.jpg);
-        }
-        .recept-recept3 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        }
-        .recept-recept4 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        }
-        .recept-recept5 {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        }
-    }
-}
-
-@media (min-width: 480px) {
-    .doporucujeme {
-        height: 550px;
-        display: flex;
-    }
-    .burger {
-        width: 100%;
-        height: 50%;
-        flex-flow:row;
-        flex-wrap: wrap;
-        display: flex;
-    }
-    
-     .img {
-        width: 50%%;
-        height: 50%;
-        flex-flow:row;
-        flex-wrap: wrap;
-        display: flex;
-        align-content: 
-    }   
-    
-} 
-.hlavni-recept {
-    min-height: 400;
-    background-image: url(images/burger.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    max-width: 500px;
+.doporucujeme {
     display: flex;
     flex-direction: column;
+}
+.hlavni-recept { 
+    min-height: 200px; 
+    background-image: url(images/burger.jpg);
+    background-size: cover;
+    background-position: center;  
+    background-repeat: no-repeat;
+    padding: 10px;
+    border: 1px solid white;
+/*  display: flex;
+    flex-direction: column; */
+    color: white;
+    position: relative;
+}
+
+.recept-meta {
+    display: flex;
     justify-content: space-between;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.recept-nazev {
+    font-size: 28px;
+    color: white;
+    font-weight: 800;
+    position: absolute; 
+    left: 10px; 
+    bottom: 10px;
+}
+
+
+/* 
+.recept-kategorie {
+    font-size: 14px;
+    font-weight: 800;
+    top: 10px;
+    left: 10px;
+} */
+
+/* .recept-komentare {
+    font-size: 14px;
+    font-weight: 400;
+     top: 10px;
+    right: 10px;
+} */
+
+.recept {
+    min-height: 90px;
+    /* padding: 10px; */
+    border: 1px solid white;
+/*  display: flex;
+    flex-direction: column; */
+    color: white;
+    position: relative;
+    border: 1px solid white;
+}
+
+.recept h2 {
+    font-size: 18px;
+}
+
+.recept2 {
+/*  display: flex;
+    flex-direction: column;
+    width: 100%;*/
+    background-image: url(images/sushi.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.recept3 {
+/*  display: flex;
+    flex-direction: column;
+    width: 100%; */
+    background-image: url(images/rajcata.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.recept4 {
+/*  display: flex;
+    flex-direction: column;
+    width: 100%; */
+    background-image: url(images/kure.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.recept5 {
+/*  display: flex;
+    flex-direction: column;
+    width: 100%; */
+    background-image: url(images/grilovani.jpg);
+    background-size: cover;
+    background-position: center;
+}    
+
+@media (min-width: 480px) {
+.doporucujeme {
+    display: flex;
+    flex-direction: column;
+}
+.hlavni-recept {
+    min-height: 250px;
+    background-image: url(images/burger.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    /* max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; */
+    padding: 10px;
+    border: 1px solid white;
     color: white;
     position: relative;
 }
@@ -145,32 +167,98 @@ notebook/pc:
     width: 100%;
     height: 100%;
     background-color: black; */
+
+.recept-nazev {
+    font-size: 36px;
+    color: white;
+    font-weight: 800;
+    position: absolute; 
+    left: 10px; 
+    bottom: 10px;
 }
+
 .recept-meta {
     display: flex;
     justify-content: space-between;
     font-size: 14px;
 }
-.recept-kategorie {
-    display: flex;
-    padding: 10px;
-}
-.recept-komentare {
-    float: right;
-    padding: 10px;
+
+.recept {
+    min-height: 150px;
+    padding: 10px; 
+    border: 1px solid white;
+    color: white;
+    position: relative;
 }
 
-.recept.nazev {
-    font-size: 48px;
+.recept h2 {
+    font-size: 22px;
 }
 .sloupec {
     display: flex;
-    direction: row;
-    
+    flex-direction: row; 
 }
+.recept2 {
+    flex-direction: row;
+    width: 50%;
+    flex-wrap: wrap;
+    background-image: url(images/sushi.jpg);
+    background-size: cover;
+    background-position: center;
+}
+.recept3 {
+    flex-direction: row;
+    width: 50%;
+    flex-wrap: wrap;
+    background-image: url(images/rajcata.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.recept4 {
+    flex-direction: row;
+    width: 50%;
+    flex-wrap: wrap;
+    background-image: url(images/kure.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.recept5 {
+    flex-direction: row;
+    width: 50%;
+    flex-wrap: wrap;
+    background-image: url(images/grilovani.jpg);
+    background-size: cover;
+    background-position: center;
+}    
+}
+@media (min-width: 860px) {
+    .doporucujeme {
+    display: flex;
+    flex-direction: row;
+}
+.hlavni-recept {
+    min-height: 400px;
+    width: 33%;
+    padding: 20px;
+}
+.sloupec {
+    flex-direction: column;
+    width: 33%;
+}
+.recept2, .recept3, .recept4, .recept5{
+    flex-direction: column;
+    flex-basis: 100%;
+    width: 100%;
+    min-height: 200px;
+    padding: 20px;
+}
+}
+
 /* .background-image: linear-gradient (rgba (0, 0, 0, 0.4),
                                    rgba (0, 0, 0, 0.4)),
                     url (images/burger.jpg); 
 .hlavni-recept:hover::before {
     background-color: rgba (0, 0, 0, 0);
-}*/
+}*/ 
